# tempoet

./: .dockerignore  .gitignore  Dockerfile  README.rst  cookiecutter.json  cookiecutter_config.yml  pyproject.toml
.devcontainer/: devcontainer.json
.github/actions/setup/: action.yml
.github/workflows/: cd.yml  ci.yml
hooks/: post_gen_project.py
scripts/: run.sh
tests/: __init__.py  conftest.py
tests/e2e/: test_e2e.py
tests/unit/: test_bake_project.py
{{ cookiecutter.package_name }}/: .gitignore  CHANGELOG.rst  CONTRIBUTING.rst  LICENSE  Makefile  README.rst  pyproject.toml  sonar-project.properties
{{ cookiecutter.package_name }}/.devcontainer/: devcontainer.json
{{ cookiecutter.package_name }}/.github/: dependabot.yml
{{ cookiecutter.package_name }}/.github/actions/setup/: action.yml
{{ cookiecutter.package_name }}/.github/workflows/: cd.yml  ci.yml  labels.yml
{{ cookiecutter.package_name }}/docs/: conf.py  index.rst
{{ cookiecutter.package_name }}/docs/reference/: index.rst  main.rst
{{ cookiecutter.package_name }}/tests/: test_main.py
